--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "prisma": "^7.2.0",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
